<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dttv</string>
    <string name="action_online_video">在线视频</string>
    <string name="action_local_video">本地视频</string>
    <string name="action_settings">设置</string>
    <string name="edit_message">Enter a Message</string>
    <string name="file_select">open</string>

    <string name="FileBrowserDatabase_onCreate">
        "CREATE TABLE file_mark_table (_id INTEGER PRIMARY KEY AUTOINCREMENT, file_path TEXT, is_sel INTEGER);
        CREATE TABLE file_thumbnails_table (_id INTEGER PRIMARY KEY AUTOINCREMENT, file_path TEXT, file_data BLOB, dir_path TEXT );"
    </string>
    <string name="FileBrowserDatabase_onUpgrade">
        "DROP TABLE IF EXISTS file_mark_table
        DROP TABLE IF EXISTS file_thumbnails_table"
    </string>

    <string name="title_activity_display_message">MyMessage</string>
    <string name="show_text">here</string>
    <string name="player_start">start</string>
    <string name="player_pause">pause</string>
    <string name="player_resume">resume</string>
    <string name="player_stop">stop</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="video_activity_play">VideoPlayerActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="time_default_show">00:00:00</string>
	
	<string name="audio_play_txt_str">test for audio</string>
	<string name="audio_play_btn_str">audio btn</string>
	
	<string name="nav_desc">nav_desc</string>
	<string name="audio_effect_btn_str">Normal</string>

    <!--filebrowser -->
    <string name="device_list">Device List</string>

    <!--Storage -->
    <string name="memory_device_str">Internal Memory </string>
    <string name="sdcard_device_str">Local Disk</string>
    <string name="ext_sdcard_device_str">External Storage Card</string>
    <string name="sata_device_str">SATA</string>
    <string name="usb_device_str">USB</string>
    <string name="cdrom_device_str">CD ROM</string>
    <string name="nfs_device_str">NFS</string>
    <string name="nfsip_str">NFS IP:</string>
    <string name="nfsroute_str">NFS ROUTE:</string>
    <string name="nfsip_default_str">8.8.8.8</string>
    <string name="nfsroute_default_str">/home/ae/nfs</string>

    <!-- videoplayer -->
    <string name="videoplayer_string_time_null">00:00:00</string>
    <string name="videoplayer_string_decoder_soft">软解码</string>
    <string name="videoplayer_string_decoder_hw">硬解码</string>
    <string name="videoplayer_string_setting">播放器设置</string>

    <!-- Setting -->
    <string name="setting_preference_title">播放器设置</string>

    <string name="setting_preference_yes">是</string>
    <string name="setting_preference_no">否</string>

    <string name="setting_preference_audio_filter">过滤时长小于60秒音频</string>
    <string name="setting_preference_video_filter">过滤时长小于60秒视频</string>

    <string name="setting_preference_video_decoder_soft">sw_decoder</string>
    <string name="setting_preference_video_decoder_hw">hw_decoder</string>

    <string name="setting_preference_filebrowser_normal">全部显示</string>
    <string name="setting_preference_filebrowser_audio_only">只显示音频</string>
    <string name="setting_preference_filebrowser_video_only">只显示视频</string>

    <string name="setting_preference_display_mode">强制全屏</string>

</resources>
